Fixed blurry background on burn page

--- a/src/components/SelectNFTs/SelectNfts.scss
+++ b/src/components/SelectNFTs/SelectNfts.scss
@@ -6,9 +6,9 @@
   height: 100%;
   position: relative;
   background-image: url("../../assets/images/burn-to-mint-images/burn-to-mint-bg.jpg");
-  // background-position: center;
-  // background-size: cover;
-  // background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   // background-attachment: fixed;
 
   .rarity--charts--list {
